// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormCheckbox > renders checked 1`] = `
"<div class="mb-3 row align-items-center">
  <div class="col-md-9 col-xl-8 offset-md-3">
    <div class="form-check"><input id="active" class="form-check-input" type="checkbox" checked="" name="active"><label class="form-check-label" for="active">Active</label></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormCheckbox > renders unchecked 1`] = `
"<div class="mb-3 row align-items-center">
  <div class="col-md-9 col-xl-8 offset-md-3">
    <div class="form-check"><input id="active" class="form-check-input" type="checkbox" name="active"><label class="form-check-label" for="active">Active</label></div>
    <!--v-if-->
  </div>
</div>"
`;
